legacy_versioned_docs/version-0.10/studio-guide/data-pipeline.mdx
---
sidebar_position: 2
tags:
    - LOC
    - Studio
    - Dataprocess
    - Logic
---

# Data Pipeline: Data Process and Logic

## Data Process

Data processes are data pipelines created and run in LOC and are consisted of logic. You can browse them in **Explorer** (using the project hierarchy) or **Flat Search View** (as a list).

<div className="center-padded-sm">
    <img src={require("./img/dataprocess.png").default} alt="dataprocess" />
</div>

<div className="center-padded-sm">
    <img src={require("./img/dataprocess2.png").default} alt="dataprocess2" />
</div>

:::note
A data process is "deployed" once it is created. It would only be executed either invoked by triggers or to be run manually.

See [Quick Start](/legacy/0.10/quickstart) for how to create a data process and logic in Studio.
:::

### Edit a Data Processes

<div className="center-padded-sm">
    <img
        src={require("./img/dataprocess-edit.png").default}
        alt="dataprocess-edit"
    />
</div>

A data process can be edit for

-   Modifying metadata (name, description, etc.) of the data process
-   Adding or removing logic
-   Updating a logic to another revision
-   Adding or removing agent configuration and/or logic variable for a specific logic

Modifying an existing data process creates a new revision. If the data process is linked to at least one triggers, you have to update their linked revision.

You can edit tags without editing the data process:

<div className="center-padded-sm">
    <img
        src={require("./img/dataprocess-edit2.png").default}
        alt="dataprocess-edit2"
    />
</div>

You can delete a data process even though some logic are already linked to it.

:::warning
A logic, after being linked into a data process, can setup its own [agent configuration](/legacy/0.10/studio-guide/agent-configuration) and logic variable. If a referenced agent configuration has been deleted (missing), LOC will prevent you from executing the data process until the missing agent configuration is removed or fixed.
:::

### Manual Execution

A data process can be executed directly via Studio. See [Manually Trigger the Data Process](/legacy/0.10/quickstart#manually-trigger-the-data-process) for details.

## Logic

[Logic](/legacy/0.10/tutorials/loc-feat-overview#data-process-and-logic) are code modules to be linked into one or more data processes.

Depends on how and where the logic are created, there are two types of logic can be browsed: [cloud logic and native logic](/legacy/0.10/tutorials/loc-feat-overview#cloud-logic-vs-native-logic). Only cloud logic are editable in Studio.

<div className="center-padded-sm">
    <img src={require("./img/logic.png").default} alt="logic" />
</div>

You can view the logic code (all its revisions and draft) by clicking the logic name:

<div className="center-padded-sm">
    <img src={require("./img/logic2.png").default} alt="logic2" />
</div>

The saved edited code of a logic before build is referred as the **draft**. You can create draft from any previous revisions.

You can save the draft by clicking the "✓" icon, or click the rocket (🚀) icon to build it:

<div className="center-padded-sm">
    <img src={require("./img/logic-build.png").default} alt="logic-build" />
</div>

The build status can be found in Build History in the next section.

:::note
A logic is "deployed" once it is created. It has to be linked into a data process to be executed with it.

A logic _cannot be deleted_ if it is linked to any data process.
:::

### Edit a Cloud Logic

A cloud logic can be edited for

-   Modifying metadata (name, description, etc.) of the logic
-   modifying the source code

:::note
Native logic (deployed from local workspaces using CLI) cannot be edited in Studio. You have to re-build the logic with CLI's [`loc logic build`](/legacy/0.10/cli-handbook/cli-commands/workspace-logic#build-and-deploy-logic) command.
:::

Modifying a logic creates a new revision.

You can edit tags without editing the logic.

## Build History

The logic build history is the log of building/compiling status of all cloud logic:

<div className="center-padded-sm">
    <img src={require("./img/build-history.png").default} alt="build-history" />
</div>

If the logic did not compiled successfully, you can instect the error log:

<div className="center-padded-sm">
    <img src={require("./img/logic-error.png").default} alt="logic-error" />
</div>

:::note
The build logs of deleted logic won't be removed (displayed in non-bold names), although the source code won't be available for view either.
:::
